--- a/app/parts/nav.html
+++ b/app/parts/nav.html
@@ -1,4 +1,7 @@
 <nav class="site-nav">
+  <div class="site-nav__toggle">
+    <img src="/images/hamburger.svg" alt="Menu">
+  </div>
   <div class="site-nav__logo">
     <a href="/">
       <svg width="30px" height="30px" viewBox="0 0 80 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
@@ -16,14 +19,14 @@
   <div class="site-nav__inner">
     <div class="site-nav__left">
       <ul>
-        <li><a class="site-nav__item" href="/">Home</a></li>
-        <li><a class="site-nav__item" href="/wat-we-doen.html">Wat we doen</a></li>
+        <li><a class="site-nav__item" href="/"><span>Home</span></a></li>
+        <li><a class="site-nav__item" href="/wat-we-doen.html"><span>Wat we doen</span></a></li>
       </ul>
     </div>
     <div class="site-nav__right">
       <ul>
-        <li><a class="site-nav__item" href="/contact.html">Contact</a></li>
-        <li><a class="site-nav__item" href="/workshop.html">Workshops</a></li>
+        <li><a class="site-nav__item" href="/contact.html"><span>Contact</span></a></li>
+        <li><a class="site-nav__item" href="/workshop.html"><span>Workshops</span></a></li>
       </ul>
     </div>
   </div>
