--- a/app/wat-we-doen.html
+++ b/app/wat-we-doen.html
@@ -94,6 +94,12 @@
         <a href="" class="btn btn--black">Read more</a>
       </div>
     </div>
+    <footer>
+      <h3>Iets van CTA om ons te contacteren</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus incidunt ipsa maiores, necessitatibus non porro provident quod suscipit temporibus veniam veritatis voluptatem!
+      </p>
+    </footer>
   </section>
 </article>
 
