--- a/app/workshop.html
+++ b/app/workshop.html
@@ -96,7 +96,7 @@
       <h1>Interesse of extra informatie nodig?</h1>
       <p>De workshop kan zowel dienen voor start-ups, KMO's als grote merken en bedrijven.</p>
       <p>Vul onderstaand formulier in voor meer informatie en kostprijs.</p>
-      <form action="">
+      <form class="workshop-cta__form" action="">
         <div class="form-element">
           <input type="text" name="naam" id="naam" placeholder="Naam">
         </div>
@@ -111,7 +111,9 @@
 
           </textarea>
         </div>
-        <button class="btn">Versturen</button>
+        <div class="form-element">
+          <button class="btn">Versturen</button>
+        </div>
       </form>
       <p class="smaller">
         Of contacteer ons via <a href="mailto:contact@metatalk.be">contact@metatalk.be</a>
