--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <div class="logos">
   <h2 class="label">We guided online projects for</h2>
   <div class="logos__logo"><img src="images/logo-limburg.png" alt=""></div>
-  <div class="logos__logo"><img src="images/logo-een.png" alt=""></div>
+  <div class="logos__logo"><img src="images/logo-trendwolves.png" alt=""></div>
   <div class="logos__logo"><img src="images/logo-mtv.png" alt=""></div>
   <div class="logos__logo"><img src="images/logo-oxfam.png" alt=""></div>
 </div>
