--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -2,11 +2,11 @@
 <html class="no-js" lang="">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="">
+  <meta name="description" content="We help brands and companies reach their full online potential.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>metatalk 2015 2</title>
+  <title>MetaTalk</title>
 
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" type="icon/image" href="/images/metatalk-logo.png">
   <!-- Place favicon.ico in the root directory -->
 
   <!-- build:css styles/vendor.css -->
