--- a/app/wat-we-doen.html
+++ b/app/wat-we-doen.html
@@ -9,9 +9,9 @@
       <source src="/images/metatalk-video.mp4" type="video/mp4">
     </video>
     <div class="header__center">
-      <h1 class="huge">We guide online projects</h1>
+      <h1 class="huge">MetaTalk <span>begeleidt online projecten.</span></h1>
       <p class="lead">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab distinctio eveniet illo in nisi provident quam repellat totam voluptatibus voluptatum?
+        Wij zorgen voor een online identiteit die er goed uit ziet, én die werkt. Samen brengen we het online potentieel in kaart, en zetten de projecten in gang om dit te realiseren.
       </p>
     </div>
   </header>
@@ -21,6 +21,13 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi deserunt distinctio doloremque est eveniet fugit id nihil nostrum, officia.
       </p>
+      <ul class="tags">
+        <li>Online storytelling</li>
+        <li>Social media integratie</li>
+        <li>Online communities</li>
+        <li>Content marketing</li>
+        <li>(Starten met) e-commerce</li>
+      </ul>
       <p class="smaller">
         Not sure how to start? <a href="">Check out our workshop</a>
       </p>
@@ -30,19 +37,31 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi deserunt distinctio doloremque est eveniet fugit id nihil nostrum, officia.
       </p>
+      <ul class="tags">
+        <li>Webarchitectuur & wireframing</li>
+        <li>Responsive webdesign</li>
+        <li>Creatie online campagnes</li>
+        <li>Visuele merkidentiteit: foto & video</li>
+      </ul>
     </div>
     <div class="what-services__col">
       <h2>Uitvoering</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi deserunt distinctio doloremque est eveniet fugit id nihil nostrum, officia.
       </p>
+      <ul class="tags">
+        <li>Online community platform</li>
+        <li>Responsive websites</li>
+        <li>Mobiele applicaties</li>
+        <li>Webshops</li>
+      </ul>
     </div>
   </section>
   <section class="what-network header header--dark header--center header--network">
     <div class="header__center">
       <h1>We have a highly skilled network <span>that will make you shine.</span></h1>
       <p class="lead">
-        When it comes to execution, we are privileged to work with the best in every field: from graphics and photography to the geekiest programming skills out there.
+        De digitale wereld is complex. Om voor elk project de juiste skills aan boord te hebben, schakelen we ons netwerk van ervaren professionals in.
       </p>
     </div>
   </section>
@@ -55,21 +74,21 @@
         <div class="what-portfolio__logo">
           <img src="/images/logo-trendwolves.png" alt="">
         </div>
-        <h2>Urban Crafts campaign <span>With Hello Bank &amp; Trendwolves</span></h2>
+        <h2>Urban Crafts campagne <span>Met Hello Bank &amp; Trendwolves</span></h2>
         <p>
-          Can we reinvent a spammy like-button contest and create meaningful supporters instead?
+          Afscheid nemen van de spammy like-button en waardevolle supporters engageren.
         </p>
-        <a href="" class="btn btn--black">Read more</a>
+        <a href="#/urban-crafts" class="btn btn--black btn--project">Lees meer</a>
       </div>
       <div class="what-portfolio__col">
         <div class="what-portfolio__logo">
           <img src="/images/logo-oxfam.png" alt="">
         </div>
-        <h2>E-commerce pop-up  <span>for Oxfam</span></h2>
+        <h2>E-commerce pop-up  <span>voor Oxfam</span></h2>
         <p>
-          Can we create an interesting online experiences and help a non-profit get started with e-commerce?
+          Hoe creëren we een relevante online verkoopservaring voor een non-profit organisatie?
         </p>
-        <a href="" class="btn btn--black">Read more</a>
+        <a href="#/oxfam" class="btn btn--black btn--project">Lees meer</a>
       </div>
     </div>
     <div class="what-portfolio__row">
@@ -77,30 +96,34 @@
         <div class="what-portfolio__logo">
           <img src="/images/logo-limburg.png" alt="">
         </div>
-        <h2>Youth <span>in the Province of Limburg</span></h2>
+        <h2>Jeugd <span>in de Provincie Limburg</span></h2>
         <p>
-          We play a role in almost every online youth platform in Limburg. From the famous Limbomania music contest to well-known events such as Putrock and
+          We werkten de afgelopen 5 jaar mee aan vrijwel elk online jeugdplatform in Limburg. Van de bekende Limbomania contests tot festivals als Putrock.
         </p>
-        <a href="" class="btn btn--black">Read more</a>
+        <a href="" class="btn btn--black">Lees meer</a>
       </div>
       <div class="what-portfolio__col">
         <div class="what-portfolio__logo">
           <img src="/images/logo-mtv.png" alt="">
         </div>
-        <h2>Personalized smartphones <span>with Mtv &amp; Musketon</span></h2>
+        <h2>Gepersonaliseerde smartphones <span>met Mtv &amp; Musketon</span></h2>
         <p>
-          How cool would it be to create your own Iphone case online using handcrafted Musketon icons? That’s exactly what we did for +5000 MTV fans.
+          Online je eigen smartphone case ontwerpen met illustraties van superstar Musketon? +5000 MTV fans lieten hun creativiteit los op ons platform.
         </p>
-        <a href="" class="btn btn--black">Read more</a>
+        <a href="" class="btn btn--black">Lees meer</a>
       </div>
     </div>
     <footer>
-      <h3>Iets van CTA om ons te contacteren</h3>
+      <h3>Klaar om er voor te gaan?</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus incidunt ipsa maiores, necessitatibus non porro provident quod suscipit temporibus veniam veritatis voluptatem!
+        Samen brengen we jullie online verhaal naar een hoger niveau. Laat van je horen, en we komen kennismaken.
+      </p>
+      <p>
+        <a href="/contact.html" class="btn btn--black">Contacteer ons</a>
       </p>
     </footer>
   </section>
 </article>
 
+@@include('./parts/project-detail.html')
 @@include('./parts/footer.html')
