--- a/app/workshop.html
+++ b/app/workshop.html
@@ -7,7 +7,7 @@
     <div class="header__center">
       <h1 class="huge">MetaTalk Workshop</h1>
       <p class="lead">
-        Changing or starting an online prescense can be scary and difficult. Think before you do! We'll help you in a 4h workshop.
+        Voor we beginnen, willen we weten wat voor jullie organisatie online werkt. We starten met een strategische workshop. Geen angst: wij zorgen voor het proces!
       </p>
     </div>
   </header>
@@ -20,22 +20,26 @@
     </header>
     <div class="workshop-how__col is-first">
       <img src="/images/icon-users.svg" alt="MetaTalk workshop">
-      <h2>4h workshop</h2>
+      <h2>Helderheid in 4u</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque culpa cum excepturi expedita explicabo illum nobis quo recusandae voluptas. Illo natus pariatur placeat quas quisquam ratione similique tempora temporibus!
+        Wij brengen het juiste referentiekader om samen te definiëren hoe we jullie online traject gaan invullen. Verwacht je aan enkele interactieve oefeningen!
       </p>
     </div>
     <div class="workshop-how__col">
       <img src="/images/icon-document.svg" alt="MetaTalk strategisch plan">
       <h2>Strategisch plan</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque culpa cum excepturi expedita explicabo illum nobis quo recusandae voluptas. Illo natus pariatur placeat quas quisquam ratione similique tempora temporibus!
+        Eén workshop is voor ons voldoende om een concreet online plan uit te werken:
+        - Doelstellingen
+        - Kanalen
+        - Benchmarks
+        - Planning & budget
       </p>
     </div>
     <footer>
       <h3>En daarna?</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam asperiores consequatur deleniti harum molestiae nobis.
+        Nu gaan we het strategisch plan ook werkelijk realiseren: wij begeleiden jullie van online storytelling tot webdesign, van online communities tot e-commerce.
       </p>
     </footer>
   </section>
@@ -107,9 +111,7 @@
           <input type="text" name="bedrijf" id="bedrijf" placeholder="Naam bedrijf of organisatie">
         </div>
         <div class="form-element">
-          <textarea name="context" id="context" rows="3" placeholder="Concreet probleem of vraag (optioneel)">
-
-          </textarea>
+          <textarea name="context" id="context" rows="4" placeholder="Concreet probleem of vraag (optioneel)"></textarea>
         </div>
         <div class="form-element">
           <button class="btn">Versturen</button>
