--- a/app/contact.html
+++ b/app/contact.html
@@ -24,12 +24,13 @@
       Call <strong>+32 498 83 75 51</strong> or mail <a href="mailto:contact@metatalk.be">contact@metatalk.be</a>
     </p>
     <div class="contact__address-admin">
-      <h3 class="label">Administratie adres</h3>
+      <h3 class="label">Administratie</h3>
       <address>
         <strong>These Guys bvba</strong> <br>
         Havenstraat 9 bus 5.3 <br>
         3500 Hasselt <br> <br>
         <small>BE 0563 862 483</small>
+        <small></small>
       </address>
     </div>
   </div>
