--- a/app/contact.html
+++ b/app/contact.html
@@ -21,7 +21,7 @@
       3500 Hasselt
     </address>
     <p class="lead">
-      Call <strong>+32 498 83 75 51</strong> or mail <a href="mailto:contact@metatalk.be">contact@metatalk.be</a>
+      Bel <strong>+32 498 83 75 51</strong> of mail <a href="mailto:contact@metatalk.be">contact@metatalk.be</a>
     </p>
     <div class="contact__address-admin">
       <h3 class="label">Administratie</h3>
@@ -30,7 +30,6 @@
         Havenstraat 9 bus 5.3 <br>
         3500 Hasselt <br> <br>
         <small>BE 0563 862 483</small>
-        <small></small>
       </address>
     </div>
   </div>
