--- a/app/index.html
+++ b/app/index.html
@@ -5,19 +5,22 @@
   <div class="header__center">
     <h1 class="huge">We help brands and companies <span>reach their full online potential.</span></h1>
   </div>
-  <a href="#" class="down"></a>
+  <a href="#cta" class="down"></a>
 </header>
 <div class="logos">
-  <h2 class="label">We guided online projects for</h2>
-  <div class="logos__logo"><img src="images/logo-limburg.png" alt=""></div>
-  <div class="logos__logo"><img src="images/logo-trendwolves.png" alt=""></div>
-  <div class="logos__logo"><img src="images/logo-mtv.png" alt=""></div>
-  <div class="logos__logo"><img src="images/logo-oxfam.png" alt=""></div>
+  <h2 class="label">We beheren online projecten voor</h2>
+  <div class="logos__logo"><a href="#/jeugd-in-limburg" class="btn--project"><img src="images/logo-limburg.png" alt="Limburg"></a></div>
+  <div class="logos__logo"><a href="#/urban-crafts" class="btn--project"><img src="images/logo-trendwolves.png" alt="Trendwolves"></a></div>
+  <div class="logos__logo"><a href="#/mtv" class="btn--project"><img src="images/logo-mtv.png" alt="MTV"></a></div>
+  <div class="logos__logo"><a href="#/oxfam" class="btn--project"><img src="images/logo-oxfam.png" alt="Oxfam"></a></div>
 </div>
-<div class="header header--content">
+<div class="header header--content header--center" id="cta">
   <h1>Hi, we are your new friends!</h1>
   <p>
-    We will take care of your online presence from now on. At the end of the road though, we will deliver output that brings in results, wether it’s a website, webshop or social media campaign.
+    Wij beheren je online aanwezigheid, van strategisch plan tot en met de implementatie. Of het nu gaat om een website, webshop of social media campagne: onze output levert resultaten op.
+  </p>
+  <p class="space-top">
+    <a href="/wat-we-doen.html" class="btn btn--black">Ontdek hoe we te werk gaan</a>
   </p>
 </div>
 @@include('./parts/footer.html')
