--- a/app/parts/project-detail.html
+++ b/app/parts/project-detail.html
@@ -8,15 +8,28 @@
     <div class="project-detail__image project-detail__image--small" style="background-image:url(images/projects/oxfam/photography.jpg)"></div>
     <div class="project-detail__image project-detail__image--small" style="background-image:url(images/projects/oxfam/greenscreen.jpg)"></div>
     <div class="project-detail__image project-detail__image--header">
-      <img src="/images/projects/oxfam/header.jpg" alt="Oxfam">
+      <img src="/images/projects/oxfam/DSCF7673.jpg" alt="Oxfam">
     </div>
   </div>
   <div class="project-detail__description">
     <div class="center">
       <h1>E-commerce pop-up  <span>voor Oxfam</span></h1>
+      <h2>Strategie</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores assumenda corporis dignissimos doloribus ea eaque exercitationem facere facilis hic, ipsam nisi quod ratione recusandae repellat repudiandae soluta, veritatis voluptatibus.
+        Hoe kunnen we een grote non-profit organisatie (en hun publiek) laten kennis maken met E-commerce?
       </p>
+      <h2>Concept</h2>
+      <p>
+        Via een tijdelijke e-shop kon je een Oxfam pakket bestellen als vaderdag cadeau. Het aanbod werd beperkt gehouden en de webshop in een 24u durende hackaton gemaakt.
+      </p>
+      <p>
+        Hierdoor kon Oxfam kennismaken met alle facetten van E-commerce (van marketing to fullfillment) en dit meenemen naar de grotere oefening van een doorlopende e-shop.
+      </p>
+      <h2>Implementatie</h2>
+      <ul>
+        <li>Technische ontwikkeling van het webplatform in samenwerking met <em>ByteLogic</em></li>
+        <li>Fotografie door <em>Renaat Nijs</em></li>
+      </ul>
     </div>
     <a href="#" class="project-detail__nav">
       Volgend project
@@ -27,8 +40,13 @@
 <article class="project-detail" id="urban-crafts">
   <a href="#" class="project-detail__close">×</a>
   <div class="project-detail__images">
+
+
+    <div class="project-detail__image project-detail__image--wide" style="background-image:url(/images/projects/urbancrafts/foto-1.jpg)"></div>
+    <div class="project-detail__image project-detail__image--small" style="background-image:url(images/projects/urbancrafts/foto-2.jpg)"></div>
+    <div class="project-detail__image project-detail__image--small" style="background-image:url(images/projects/urbancrafts/foto-3.jpg)"></div>
     <div class="project-detail__image project-detail__image--header">
-      <img src="/images/projects/urbancrafts/header.jpg" alt="Urban Crafts">
+      <img src="/images/projects/urbancrafts/urban-craftsipad.jpg" alt="Urban Crafts">
     </div>
     <div class="project-detail__image project-detail__image--header">
       <img src="/images/projects/urbancrafts/browser.jpg" alt="Oxfam">
@@ -37,11 +55,91 @@
   <div class="project-detail__description">
     <div class="center">
       <h1>Urban Crafts campagne  <span>met Hello Bank &amp; Trendwolves</span></h1>
+      <h2>Strategie</h2>
+      <p>Hoe evolueren we van promo-campagne naar een volwaardig community platform dat meerwaarde biedt voor de crafters en organisator?</p>
+      <h2>Concept</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores assumenda corporis dignissimos doloribus ea eaque exercitationem facere facilis hic, ipsam nisi quod ratione recusandae repellat repudiandae soluta, veritatis voluptatibus.
+        De experience van de wedstrijd werd hervormd van een spammy like actie naar het crowdsourcen van supporters. Ook werkten we meer rond visuele storytelling met fotografie en video.
       </p>
+      <h2>Implementatie</h2>
+      <ul>
+        <li>Technische ontwikkeling van het webplatform in samenwerking met <em>Undefined</em></li>
+        <li>Fotografie door <em>Renaat Nijs</em></li>
+      </ul>
       <footer>
-        <a href="//urbancrafts.tv" class="btn">Link naar website ofzo</a>
+        <a href="//urbancrafts.tv" class="btn">Bekijk urbancrafts.tv</a>
+      </footer>
+    </div>
+    <a href="#" class="project-detail__nav">
+      Volgend project
+    </a>
+  </div>
+</article>
+
+<article class="project-detail" id="mtv">
+  <a href="#" class="project-detail__close">×</a>
+  <div class="project-detail__images">
+    <div class="project-detail__image project-detail__image--header">
+      <img src="/images/projects/mtv/mtv-header.jpg" alt="MTV">
+    </div>
+    <div class="project-detail__image project-detail__image--header">
+      <img src="/images/projects/mtv/mtv-case.jpg" alt="MTV">
+    </div>
+    <div class="project-detail__image project-detail__image--wide" style="background-image:url(/images/projects/mtv/mtv-4.jpg)"></div>
+    <div class="project-detail__image project-detail__image--small" style="background-image:url(images/projects/mtv/mtv-2.jpg)"></div>
+    <div class="project-detail__image project-detail__image--small-half" style="background-image:url(images/projects/mtv/mtv-1.jpg)"></div>
+    <div class="project-detail__image project-detail__image--small-half" style="background-image:url(images/projects/mtv/mtv-3.jpg)"></div>
+    <div class="project-detail__image project-detail__image--header">
+      <img src="/images/projects/mtv/mtv-ipad.jpg" alt="MTV">
+    </div>
+  </div>
+  <div class="project-detail__description">
+    <div class="center">
+      <h1>Gepersonaliseerde smartphones <span>met Mtv & Musketon</span></h1>
+      <h2>Strategie</h2>
+      <p>Hoe kunnen we een meerwaarde bieden voor een jeugdige doelgroep door op trends rond persoonlijke creativiteit en personalisatie in te spelen?</p>
+      <h2>Concept</h2>
+      <p>
+        Via de "case creator" kan je eigen smartphone cases maken met Musketon designs.
+      </p>
+      <h2>Implementatie</h2>
+      <ul>
+        <li>Technische ontwikkeling van het webplatform in samenwerking met <em>ByteLogic</em></li>
+        <li>Design door <em>Musketon</em></li>
+        <li>Video door <em>Konstruktiv</em></li>
+      </ul>
+      <footer>
+        <a href="//gifmemorecreativity.com" class="btn">Bekijk web platform</a>
+      </footer>
+    </div>
+    <a href="#" class="project-detail__nav">
+      Volgend project
+    </a>
+  </div>
+</article>
+
+<article class="project-detail" id="jeugd-in-limburg">
+  <a href="#" class="project-detail__close">×</a>
+  <div class="project-detail__images">
+    <div class="project-detail__image project-detail__image--header">
+      <img src="/images/projects/limburg/limburg-header.jpg" alt="Jeugd Limburg">
+    </div>
+    <div class="project-detail__image project-detail__image--header">
+      <img src="/images/projects/limburg/jeugdlimburg-browser.jpg" alt="Jeugd Limburg">
+    </div>
+    <div class="project-detail__image project-detail__image--wide" style="background-image:url(/images/projects/limburg/fortyfive.jpg)"></div>
+    <div class="project-detail__image project-detail__image--small" style="background-image:url(images/projects/limburg/putrock.jpg)"></div>
+    <div class="project-detail__image project-detail__image--small" style="background-image:url(images/projects/limburg/club45.jpg)"></div>
+    <div class="project-detail__image project-detail__image--header">
+      <img src="/images/projects/limburg/limbomania.jpg" alt="Jeugd Limburg">
+    </div>
+  </div>
+  <div class="project-detail__description">
+    <div class="center">
+      <h1>Jeugd <span>in de Provincie Limburg</span></h1>
+      <p>We beheren een groot deel jeugd gerelateerde projecten in de Provincie Limburg vanuit een overkoepelende en coördinerende rol. De voornaamste projecten zijn Limbomania, Provinciale Jeugddienst, Forty Five en festivals zoals Putrock en KPM cup.</p>
+      <footer>
+        <a href="//gifmemorecreativity.com" class="btn">Website provinciale jeugddienst</a>
       </footer>
     </div>
     <a href="#" class="project-detail__nav">
