--- a/app/wat-we-doen.html
+++ b/app/wat-we-doen.html
@@ -5,13 +5,13 @@
 
 <article class="what">
   <header class="header header--center header--dark header--video">
-    <video muted loop poster="IMAAAAAGE.jpg">
+    <video muted loop poster="/images/video-cover.jpg">
       <source src="/images/metatalk-video.mp4" type="video/mp4">
     </video>
     <div class="header__center">
-      <h1 class="huge">MetaTalk <span>begeleidt online projecten.</span></h1>
+      <h1 class="huge">MetaTalk <span>beheert je online aanwezigheid.</span></h1>
       <p class="lead">
-        Wij zorgen voor een online identiteit die er goed uit ziet, én die werkt. Samen brengen we het online potentieel in kaart, en zetten de projecten in gang om dit te realiseren.
+        Wij zorgen voor een online aanwezigheid die mooi oogt én doet wat moet. Samen met de klant brengen we het online potentieel in kaart en zetten we trajecten op om tot een realisatie te komen.
       </p>
     </div>
   </header>
@@ -19,7 +19,7 @@
     <div class="what-services__col">
       <h2>Online strategie</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi deserunt distinctio doloremque est eveniet fugit id nihil nostrum, officia.
+        Wat werkt voor jullie organisatie in de online wereld? Dat moeten we weten en daarom vertrekken we van concrete doelen. We starten samen met een <a href="/workshop.html">strategische workshop</a> en zetten die vervolgens om naar een verhelderend strategisch plan.
       </p>
       <ul class="tags">
         <li>Online storytelling</li>
@@ -28,14 +28,11 @@
         <li>Content marketing</li>
         <li>(Starten met) e-commerce</li>
       </ul>
-      <p class="smaller">
-        Not sure how to start? <a href="">Check out our workshop</a>
-      </p>
     </div>
     <div class="what-services__col">
       <h2>Concept &amp; design</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi deserunt distinctio doloremque est eveniet fugit id nihil nostrum, officia.
+        Om een online verhaal te vertellen is een originele en visuele insteek noodzakelijk. Wij maken de connectie met de bezoeker met creatieve en aantrekkelijke concepten, trouw aan die insteek.
       </p>
       <ul class="tags">
         <li>Webarchitectuur & wireframing</li>
@@ -47,7 +44,7 @@
     <div class="what-services__col">
       <h2>Uitvoering</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium commodi deserunt distinctio doloremque est eveniet fugit id nihil nostrum, officia.
+        Om elk project tot een goed einde te brengen doen we beroep op de juiste skills uit ons netwerk van professionals. Onze voldoening zit daarbij in het omzetten van een strategie naar hoogwaardige output.
       </p>
       <ul class="tags">
         <li>Online community platform</li>
@@ -59,15 +56,15 @@
   </section>
   <section class="what-network header header--dark header--center header--network">
     <div class="header__center">
-      <h1>We have a highly skilled network <span>that will make you shine.</span></h1>
+      <h1>Een netwerk van professionals <span>zorgt voor hoogwaardige output.</span></h1>
       <p class="lead">
-        De digitale wereld is complex. Om voor elk project de juiste skills aan boord te hebben, schakelen we ons netwerk van ervaren professionals in.
+        De digitale wereld is complex. Om voor elk project de juiste skills aan boord te hebben, schakelen we ons netwerk van ervaren professionals in. Deze flexibiliteit garandeert de beste resultaten.
       </p>
     </div>
   </section>
   <section class="what-portfolio">
     <header>
-      <h1>Projects we guided <span>to full awesomeness.</span></h1>
+      <h1>Projecten die we beheren</h1>
     </header>
     <div class="what-portfolio__row">
       <div class="what-portfolio__col">
@@ -100,7 +97,7 @@
         <p>
           We werkten de afgelopen 5 jaar mee aan vrijwel elk online jeugdplatform in Limburg. Van de bekende Limbomania contests tot festivals als Putrock.
         </p>
-        <a href="" class="btn btn--black">Lees meer</a>
+        <a href="#/jeugd-in-limburg" class="btn btn--black btn--project">Lees meer</a>
       </div>
       <div class="what-portfolio__col">
         <div class="what-portfolio__logo">
@@ -110,7 +107,7 @@
         <p>
           Online je eigen smartphone case ontwerpen met illustraties van superstar Musketon? +5000 MTV fans lieten hun creativiteit los op ons platform.
         </p>
-        <a href="" class="btn btn--black">Lees meer</a>
+        <a href="#/mtv" class="btn btn--black btn--project">Lees meer</a>
       </div>
     </div>
     <footer>
@@ -119,7 +116,7 @@
         Samen brengen we jullie online verhaal naar een hoger niveau. Laat van je horen, en we komen kennismaken.
       </p>
       <p>
-        <a href="/contact.html" class="btn btn--black">Contacteer ons</a>
+        <a href="/contact.html" class="btn btn--black">Plan een vrijblijvend overleg in</a>
       </p>
     </footer>
   </section>
