--- a/app/workshop.html
+++ b/app/workshop.html
@@ -7,7 +7,7 @@
     <div class="header__center">
       <h1 class="huge">MetaTalk Workshop</h1>
       <p class="lead">
-        Voor we beginnen, willen we weten wat voor jullie organisatie online werkt. We starten met een strategische workshop. Geen angst: wij zorgen voor het proces!
+        Hoe kan online aanwezigheid je bedrijf of organisatie beter te maken? Deze vraag beantwoorden we door middel van een strategische workshop.
       </p>
     </div>
   </header>
@@ -15,31 +15,30 @@
     <header>
       <h1>Hoe werkt het</h1>
       <p class="lead">
-        De workshop is een interactieve sessie waarbij we samen kritisch kijken naar je online aanwezigheid.
+        De workshop is een interactieve sessie van een halve dag waarbij we samen je huidige online aanwezigheid bekijken.
       </p>
     </header>
     <div class="workshop-how__col is-first">
       <img src="/images/icon-users.svg" alt="MetaTalk workshop">
-      <h2>Helderheid in 4u</h2>
+      <h2>Helderheid in een halve dag</h2>
       <p>
-        Wij brengen het juiste referentiekader om samen te definiëren hoe we jullie online traject gaan invullen. Verwacht je aan enkele interactieve oefeningen!
+        Samen met jullie brainstormen we een halve dag over de doelen van je bedrijf en welke online oplossingen kunnen bijdragen om die te bereiken.
       </p>
     </div>
     <div class="workshop-how__col">
       <img src="/images/icon-document.svg" alt="MetaTalk strategisch plan">
       <h2>Strategisch plan</h2>
       <p>
-        Eén workshop is voor ons voldoende om een concreet online plan uit te werken:
-        - Doelstellingen
-        - Kanalen
-        - Benchmarks
-        - Planning & budget
+        Na de workshop hebben we voldoende informatie om een concreet online plan uit te werken met daarin oa. doelstellingen, de nodige kanalen, planning & budget.
       </p>
     </div>
     <footer>
       <h3>En daarna?</h3>
       <p>
-        Nu gaan we het strategisch plan ook werkelijk realiseren: wij begeleiden jullie van online storytelling tot webdesign, van online communities tot e-commerce.
+        Stop talking, start doing. Of het nu gaat over online storytelling, webdesign of e-commerce, samen met ons netwerk of jullie huidige partners kunnen we het strategisch plan uitvoeren.
+      </p>
+      <p>
+        <a href="/wat-we-doen.html">Ontdek hoe we te werk gaan</a>
       </p>
     </footer>
   </section>
@@ -47,7 +46,7 @@
     <header>
       <h1>Wat bespreken we?</h1>
       <p>
-
+        De workshop heeft als doel om problemen en nieuw potentieel van je online aanwezigheid te ontdekken. Hieronder vind je enkele mogelijke topics die aan bod kunnen komen.
       </p>
     </header>
 
@@ -57,26 +56,24 @@
     </div>
     <div class="workshop-what__col">
       <dl>
-        <dt>Hoe kan je website of webshop beter converteren?</dt>
+        <dt>Hoe haalt je website of webshop een betere conversie?</dt>
         <dd>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis laboriosam minus omnis vitae voluptatibus?
+          Weet je wie jouw bezoekers zijn? En waarom bepaalde bezoekers afhaken? Spreekt jouw verhaal voldoende aan, of mist de website aan specifieke informatie?
         </dd>
         <dt>Heb ik wel een dure website of webshop nodig?</dt>
         <dd>
-          In veel gevallen is een volledig custom website overbodig. Er bestaan massa's kwalitatieve tools zoals Shopify, Squarespace, ... die je al een heel eind kunnen verder helpen zonder zotte kosten te doen. We helpen je deze tools zo goed mogelijk in te zetten en er resultaat uit te halen.
+          In veel gevallen is een volledig custom website overbodig. Er bestaan massa's kwalitatieve tools zoals Shopify, Squarespace, ... die je al een heel eind kunnen vooruithelpen zonder hoge kosten te maken. We helpen je deze tools zo goed mogelijk in te zetten en er resultaat uit te halen.
         </dd>
         <dt>Hoe kan ik het verhaal van mijn organisatie of bedrijf online vertellen?</dt>
         <dd>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis laboriosam minus omnis vitae voluptatibus?
+          Welke kanalen zijn geschikt voor onze klanten en welke boodschap moeten we brengen? Hoe maken we onze content visueel interessant? En wanneer combineren we dit met online advertising?
         </dd>
-        <dt>Hoe kan ik een online campagne opzetten met een goeie return on investment?</dt>
+        <dt>Hoe kan ik de return uit mijn bestaande online kanalen vergroten?</dt>
         <dd>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis laboriosam minus omnis vitae voluptatibus?
+          Waarschijnlijk heb je al een website en werk je al samen met een web bureau. Wij kijken hoe je investeringen in je huidige kanalen en samenwerkingen meer return kunnen opleveren.
         </dd>
       </dl>
-      <p class="label">
-        And soooo much mooree
-      </p>
+
     </div>
 
   </section>
@@ -84,23 +81,21 @@
   <section class="workshop-who">
     <header>
       <h1>Wie geeft de workshops?</h1>
-      <p class="lead">We do! Bert of Simon ..... Al</p>
+      <p class="lead">
+        Wij, Bert & Simon, zaakvoerders van MetaTalk, hebben elk 8 jaar ervaring op gebied van online communicatie en begeleidden al tientallen klanten waaronder MTV, Oxfam, Provincie Limburg, enz.
+      </p>
     </header>
-    <p>
-      We hebben al project begeleid voor onder andere:
-      ...
-    </p>
-    <footer>
-      <a href="">Lear more about us</a>
-    </footer>
   </section>
 
   <section class="workshop-cta header header--dark header--center">
     <div class="header__center">
       <h1>Interesse of extra informatie nodig?</h1>
       <p>De workshop kan zowel dienen voor start-ups, KMO's als grote merken en bedrijven.</p>
-      <p>Vul onderstaand formulier in voor meer informatie en kostprijs.</p>
-      <form class="workshop-cta__form" action="">
+      <p>Vul onderstaand formulier in voor meer informatie en budget.</p>
+      <div class="confirm">
+        We hebben je aanvraag ontvangen en nemen zo snel mogelijk contact met je op.
+      </div>
+      <form class="workshop-cta__form" method="POST" action="http://formspree.io/bert@metatalk.be" id="form">
         <div class="form-element">
           <input type="text" name="naam" id="naam" placeholder="Naam">
         </div>
@@ -113,8 +108,11 @@
         <div class="form-element">
           <textarea name="context" id="context" rows="4" placeholder="Concreet probleem of vraag (optioneel)"></textarea>
         </div>
+        <input type="hidden" name="_subject" value="Workshop request" />
+        <input type="text" name="_gotcha" style="display:none" />
+        <input type="hidden" name="_next" value="//metatalk.be/workshop.html#form" />
         <div class="form-element">
-          <button class="btn">Versturen</button>
+          <button class="btn" type="submit">Versturen</button>
         </div>
       </form>
       <p class="smaller">
